@@ -1,3 +1,13 @@
+1999-09-17  Jochen Wiedmann  <joe@ispsoft.de.de> (0.1102)
+
+	* examples/ispmailgate.m4: Removed --debug flag.
+	* examples/ispmailgate.m4: Modified ISPMAILGATE_MAILER_MAX
+	  to a default of 10000000
+	* lib/Mail/IspMailGate/Filter/VirScan.pm: $ofile always had
+	  the same name as $ifile, resulting in an endless loop. The
+	  deflaters now have an optional attribute 'extension', that
+	  will be removed from $ofile.
+
 1999-09-12  Jochen Wiedmann  <joe@ispsoft.de> (0.1100)
 
 	* Completely reworked the configuration system. Is now mostly
